redid the color pallette

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #232F3E;
-  --secondary: #F3A847;
-  --tertiary: #B12704;
-  --light: #fafafa;
+  --primary: #212121;
+  --secondary: #32E0C4;
+  --tertiary: #0D7377;
+  --light: #EEEEEE;
   --dark: #272f32;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
