--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #212121;
-  --secondary: #32E0C4;
-  --tertiary: #0D7377;
-  --light: #EEEEEE;
+  --secondary: #32e0c4;
+  --tertiary: #0d7377;
+  --light: #eeeeee;
   --dark: #272f32;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
@@ -13,6 +13,8 @@
   box-sizing: border-box;
 }
 
+/* ---------------------------------------------------------------- */
+
 html,
 body {
   min-height: 100%;
@@ -21,7 +23,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 400;
   line-height: 1.5;
   font-size: 16px;
@@ -34,7 +36,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
@@ -81,6 +83,9 @@ a:hover {
 
 header {
   background: var(--primary);
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 header a {
@@ -91,7 +96,7 @@ button {
   font-size: 1rem;
   text-decoration: none;
   padding: 0.25rem 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: none;
   outline: none;
   cursor: pointer;
@@ -100,12 +105,12 @@ button {
 }
 
 button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 button[disabled] {
   cursor: default;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 img {
@@ -131,8 +136,27 @@ input {
 
 input:focus {
   border: 1px solid var(--secondary);
-  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
 }
+
+ul {
+  margin-bottom: 0px !important;
+}
+
+footer {
+  background-color: var(--primary);
+  width: 100%;
+}
+
+footer a {
+  color: var(--light);
+}
+
+footer a :hover {
+  color: var(--secondary)
+}
+
+/* ---------------------------------------------------------------- */
 
 .container {
   width: 85%;
@@ -202,6 +226,18 @@ input:focus {
 .error-text {
   color: var(--error);
 }
+
+/* ---------------------------------------------------------------- */
+
+.custom-nav {
+  margin-right: 65px;
+}
+
+.footer-font {
+  color: var(--light);
+}
+
+/* ---------------------------------------------------------------- */
 
 @media screen and (max-width: 768px) {
   .card {
