--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,7 +43,7 @@ h6 {
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2rem;
 }
 
 h2 {
@@ -237,6 +237,9 @@ footer a :hover {
   color: var(--light);
 }
 
+.category-menu{
+  
+}
 /* ---------------------------------------------------------------- */
 
 @media screen and (max-width: 768px) {
