--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,8 +145,11 @@ ul {
 }
 
 footer {
+  position: fixed;  
   background-color: var(--primary);
   width: 100%;
+  bottom: 0;
+  z-index: 5;
 }
 
 footer a {
@@ -160,10 +163,12 @@ footer a :hover {
 /* ---------------------------------------------------------------- */
 
 .container {
-  width: 85%;
+  width: 100%;
+  /* height: 100vh; */
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px !important;
 }
 
 .flex-row {
@@ -224,6 +229,9 @@ footer a :hover {
 }
 
 /* ---------------------------------------------------------------- */
+.page-container{
+  height: 100vh;
+}
 
 .custom-nav {
   margin-right: 65px;
@@ -234,6 +242,7 @@ footer a :hover {
 }
 
 .category-menu {
+
 }
 
 .product-card {
